[tool.poetry]
name = "global-entry-interview-schedular"
version = "0.1.0"
description = "Simple script to help find open TSA Global Entry interview time slots."
authors = ["Aaren Rice <aaren.rice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twilio = "^9.0.5"
requests = "^2.32.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
